[package]
name = "oauthtesting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", features = ["json"]}
tokio = {version = "1.29.1", features = ["full"]}
url = "2.4.0"
